[tool.poetry]
name = "fastbook-course"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastbook_course"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
torchvision = "^0.15.2"
jupyterlab = "^4.0.3"
fastbook = "^0.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
